Obj/Parser.output
Nonterminals useless in grammar

   constant_expression
   unary_operator
   identifier_list
   initializer_list


Terminals unused in grammar

   FOR
   ENDL
   RETURN
   PONY
   TYPE_FLOAT
   MOD_EQU
   XOR_EQU
   SYSTEM
   COMMA
   ELLIPSIS
   WS
   '~'
   '!'


Rules useless in grammar

  120 constant_expression: conditional_expression

  121 unary_operator: AND
  122               | ADD
  123               | SUB
  124               | '~'
  125               | '!'

  126 identifier_list: TOKEN_ID

  127 initializer_list: initializer


Rules useless in parser due to conflicts

   16 concat_expression: string
   17                  | string CONCAT string

   78 unary_expression: TOKEN_READ LPAREN TYPE_LONG RPAREN

  105 declaration_list: declaration
  106                 | declaration_list declaration


State 35 conflicts: 1 shift/reduce
State 38 conflicts: 2 shift/reduce
State 39 conflicts: 1 shift/reduce
State 40 conflicts: 1 shift/reduce
State 41 conflicts: 1 shift/reduce
State 42 conflicts: 1 shift/reduce
State 43 conflicts: 2 shift/reduce
State 44 conflicts: 4 shift/reduce
State 45 conflicts: 2 shift/reduce
State 46 conflicts: 19 shift/reduce
State 47 conflicts: 4 shift/reduce
State 48 conflicts: 10 shift/reduce
State 49 conflicts: 2 shift/reduce
State 57 conflicts: 1 shift/reduce, 50 reduce/reduce
State 61 conflicts: 1 shift/reduce, 1 reduce/reduce
State 99 conflicts: 4 shift/reduce
State 145 conflicts: 1 shift/reduce, 1 reduce/reduce
State 147 conflicts: 1 shift/reduce
State 148 conflicts: 1 shift/reduce
State 151 conflicts: 2 shift/reduce
State 152 conflicts: 4 shift/reduce
State 153 conflicts: 4 shift/reduce
State 154 conflicts: 2 shift/reduce
State 155 conflicts: 2 shift/reduce
State 156 conflicts: 2 shift/reduce
State 157 conflicts: 2 shift/reduce
State 158 conflicts: 17 shift/reduce
State 159 conflicts: 17 shift/reduce
State 179 conflicts: 1 shift/reduce
State 180 conflicts: 1 shift/reduce, 50 reduce/reduce
State 182 conflicts: 46 reduce/reduce
State 189 conflicts: 50 reduce/reduce
State 205 conflicts: 1 shift/reduce
State 207 conflicts: 1 shift/reduce
State 210 conflicts: 29 reduce/reduce
State 216 conflicts: 29 reduce/reduce


Grammar

    0 $accept: pony $end

    1 pony: statement_list

    2 statement: expression_statement
    3          | if_statement
    4          | declaration
    5          | loop_statement
    6          | jump_statement

    7 statement_list: statement
    8               | statement_list statement

    9 expression_statement: SEMICOLON
   10                     | expression SEMICOLON

   11 primary_expression: string
   12                   | number
   13                   | LPAREN expression RPAREN

   14 expression: assignment_expression
   15           | concat_expression

   16 concat_expression: string
   17                  | string CONCAT string
   18                  | string CONCAT expression
   19                  | expression CONCAT string
   20                  | concat_expression CONCAT concat_expression

   21 assignment_expression: conditional_expression
   22                      | unary_expression EQ_OP assignment_expression
   23                      | unary_expression NE_OP assignment_expression
   24                      | unary_expression MUL_EQU assignment_expression
   25                      | unary_expression ADD_EQU assignment_expression
   26                      | unary_expression SUB_EQU assignment_expression
   27                      | unary_expression DIV_EQU assignment_expression
   28                      | unary_expression AND_EQU assignment_expression
   29                      | unary_expression OR_EQU assignment_expression
   30                      | unary_expression L_EQU assignment_expression
   31                      | unary_expression R_EQU assignment_expression

   32 conditional_expression: logical_or_expression
   33                       | logical_or_expression TERNARY expression COLON expression

   34 logical_or_expression: logical_and_expression
   35                      | logical_or_expression OR_OP logical_and_expression

   36 logical_and_expression: inclusive_or_expression
   37                       | logical_and_expression AND_OP inclusive_or_expression

   38 inclusive_or_expression: exclusive_or_expression
   39                        | inclusive_or_expression OR exclusive_or_expression

   40 exclusive_or_expression: and_expression
   41                        | exclusive_or_expression XOR and_expression

   42 and_expression: equality_expression
   43               | and_expression AND equality_expression

   44 equality_expression: relational_expression
   45                    | equality_expression EQ_OP relational_expression
   46                    | equality_expression NE_OP relational_expression

   47 relational_expression: shift_expression
   48                      | relational_expression LTHAN shift_expression
   49                      | relational_expression GTHAN shift_expression
   50                      | relational_expression LEQU shift_expression
   51                      | relational_expression GEQU shift_expression

   52 shift_expression: additive_expression
   53                 | shift_expression L_OP additive_expression
   54                 | shift_expression R_OP additive_expression

   55 additive_expression: multiplicative_expression
   56                    | additive_expression ADD multiplicative_expression
   57                    | additive_expression SUB multiplicative_expression
   58                    | additive_expression multiplicative_expression

   59 multiplicative_expression: unary_expression
   60                          | multiplicative_expression MUL unary_expression
   61                          | multiplicative_expression DIV unary_expression
   62                          | multiplicative_expression MOD unary_expression
   63                          | multiplicative_expression POW unary_expression

   64 unary_expression: postfix_expression
   65                 | INC unary_expression
   66                 | DEC unary_expression
   67                 | TO_INT LPAREN expression RPAREN
   68                 | SQRT LPAREN expression RPAREN
   69                 | CBRT LPAREN expression RPAREN
   70                 | PRINTLN LPAREN expression RPAREN
   71                 | PRINTLN concat_expression
   72                 | PRINTNL LPAREN expression RPAREN
   73                 | SYSCALL LPAREN expression RPAREN
   74                 | TOKEN_READ LPAREN TYPE_INT RPAREN
   75                 | TOKEN_READ LPAREN TYPE_BYTE RPAREN
   76                 | TOKEN_READ LPAREN TYPE_SHORT RPAREN
   77                 | TOKEN_READ LPAREN TYPE_LONG RPAREN
   78                 | TOKEN_READ LPAREN TYPE_LONG RPAREN

   79 postfix_expression: primary_expression
   80                   | postfix_expression INC
   81                   | postfix_expression DEC

   82 if_statement: IF LPAREN expression RPAREN compound_statement
   83             | IF LPAREN expression RPAREN compound_statement ELSE compound_statement

   84 loop_statement: WHILE LPAREN expression RPAREN compound_statement

   85 compound_statement: statement
   86                   | TOKEN_BEGIN TOKEN_END
   87                   | TOKEN_BEGIN statement_list TOKEN_END
   88                   | TOKEN_BEGIN declaration_list TOKEN_END
   89                   | TOKEN_BEGIN declaration_list statement_list TOKEN_END

   90 jump_statement: CONTINUE SEMICOLON
   91               | BREAK SEMICOLON

   92 declaration: declaration_specifiers SEMICOLON
   93            | declaration_specifiers init_declarator_list SEMICOLON

   94 declaration_specifiers: type_specifier
   95                       | type_specifier declaration_specifiers
   96                       | VAR LTHAN declaration_specifiers GTHAN TOKEN_ID
   97                       | VAR TOKEN_ID EQUAL expression

   98 type_specifier: TYPE_INT
   99               | TYPE_SHORT
  100               | TYPE_LONG
  101               | TYPE_BYTE
  102               | TYPE_STRING

  103 direct_declarator: TOKEN_ID
  104                  | LPAREN direct_declarator RPAREN

  105 declaration_list: declaration
  106                 | declaration_list declaration

  107 init_declarator: direct_declarator
  108                | direct_declarator EQ_OP initializer

  109 initializer: assignment_expression

  110 init_declarator_list: init_declarator

  111 number: INT
  112       | TRUE
  113       | FALSE
  114       | FLOAT

  115 string: STRING
  116       | STRING_LITERAL
  117       | TO_STRING LPAREN expression RPAREN
  118       | TOKEN_READ LPAREN RPAREN
  119       | TOKEN_READ LPAREN TYPE_STRING RPAREN


Terminals, with rules where they appear

$end (0) 0
'!' (33)
'~' (126)
error (256)
TOKEN_BEGIN (258) 86 87 88 89
TOKEN_END (259) 86 87 88 89
SYSCALL (260) 73
PRINTLN (261) 70 71
PRINTNL (262) 72
WHILE (263) 84
BREAK (264) 91
FOR (265)
CONTINUE (266) 90
ENDL (267)
IF (268) 82 83
ELSE (269) 83
RETURN (270)
TOKEN_READ (271) 74 75 76 77 78 118 119
PONY (272)
VAR (273) 96 97
SQRT (274) 68
CBRT (275) 69
TYPE_BYTE (276) 75 101
COLON (277) 33
TYPE_SHORT (278) 76 99
TERNARY (279) 33
TYPE_INT (280) 74 98
TYPE_LONG (281) 77 78 100
TYPE_FLOAT (282)
OR_OP (283) 35
EQUAL (284) 97
ADD_EQU (285) 25
MUL_EQU (286) 24
SUB_EQU (287) 26
DIV_EQU (288) 27
R_EQU (289) 31
L_EQU (290) 30
MOD_EQU (291)
OR_EQU (292) 29
XOR_EQU (293)
AND_EQU (294) 28
R_OP (295) 54
L_OP (296) 53
TYPE_STRING (297) 102 119
AND_OP (298) 37
GEQU (299) 51
LEQU (300) 50
DEC (301) 66 81
INC (302) 65 80
LTHAN (303) 48 96
TRUE (304) 112
FALSE (305) 113
GTHAN (306) 49 96
EQ_OP (307) 22 45 108
TO_STRING (308) 117
TO_INT (309) 67
SYSTEM (310)
NE_OP (311) 23 46
LPAREN (312) 13 67 68 69 70 72 73 74 75 76 77 78 82 83 84 104 117 118
    119
RPAREN (313) 13 67 68 69 70 72 73 74 75 76 77 78 82 83 84 104 117 118
    119
COMMA (314)
CONCAT (315) 17 18 19 20
SEMICOLON (316) 9 10 90 91 92 93
ELLIPSIS (317)
WS (318)
SUB (319) 57
ADD (320) 56
POW (321) 63
AND (322) 43
XOR (323) 41
OR (324) 39
MOD (325) 62
DIV (326) 61
MUL (327) 60
INT (328) 111
FLOAT (329) 114
STRING (330) 115
STRING_LITERAL (331) 116
TOKEN_ID (332) 96 97 103


Nonterminals, with rules where they appear

$accept (80)
    on left: 0
pony (81)
    on left: 1, on right: 0
statement (82)
    on left: 2 3 4 5 6, on right: 7 8 85
statement_list (83)
    on left: 7 8, on right: 1 8 87 89
expression_statement (84)
    on left: 9 10, on right: 2
primary_expression (85)
    on left: 11 12 13, on right: 79
expression (86)
    on left: 14 15, on right: 10 13 18 19 33 67 68 69 70 72 73 82 83
    84 97 117
concat_expression (87)
    on left: 16 17 18 19 20, on right: 15 20 71
assignment_expression (88)
    on left: 21 22 23 24 25 26 27 28 29 30 31, on right: 14 22 23 24
    25 26 27 28 29 30 31 109
conditional_expression (89)
    on left: 32 33, on right: 21
logical_or_expression (90)
    on left: 34 35, on right: 32 33 35
logical_and_expression (91)
    on left: 36 37, on right: 34 35 37
inclusive_or_expression (92)
    on left: 38 39, on right: 36 37 39
exclusive_or_expression (93)
    on left: 40 41, on right: 38 39 41
and_expression (94)
    on left: 42 43, on right: 40 41 43
equality_expression (95)
    on left: 44 45 46, on right: 42 43 45 46
relational_expression (96)
    on left: 47 48 49 50 51, on right: 44 45 46 48 49 50 51
shift_expression (97)
    on left: 52 53 54, on right: 47 48 49 50 51 53 54
additive_expression (98)
    on left: 55 56 57 58, on right: 52 53 54 56 57 58
multiplicative_expression (99)
    on left: 59 60 61 62 63, on right: 55 56 57 58 60 61 62 63
unary_expression (100)
    on left: 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78, on right:
    22 23 24 25 26 27 28 29 30 31 59 60 61 62 63 65 66
postfix_expression (101)
    on left: 79 80 81, on right: 64 80 81
if_statement (102)
    on left: 82 83, on right: 3
loop_statement (103)
    on left: 84, on right: 5
compound_statement (104)
    on left: 85 86 87 88 89, on right: 82 83 84
jump_statement (105)
    on left: 90 91, on right: 6
declaration (106)
    on left: 92 93, on right: 4 105 106
declaration_specifiers (107)
    on left: 94 95 96 97, on right: 92 93 95 96
type_specifier (108)
    on left: 98 99 100 101 102, on right: 94 95
direct_declarator (109)
    on left: 103 104, on right: 104 107 108
declaration_list (110)
    on left: 105 106, on right: 88 89 106
init_declarator (111)
    on left: 107 108, on right: 110
initializer (112)
    on left: 109, on right: 108
init_declarator_list (113)
    on left: 110, on right: 93
number (114)
    on left: 111 112 113 114, on right: 12
string (115)
    on left: 115 116 117 118 119, on right: 11 16 17 18 19


state 0

    0 $accept: . pony $end

    SYSCALL         shift, and go to state 1
    PRINTLN         shift, and go to state 2
    PRINTNL         shift, and go to state 3
    WHILE           shift, and go to state 4
    BREAK           shift, and go to state 5
    CONTINUE        shift, and go to state 6
    IF              shift, and go to state 7
    TOKEN_READ      shift, and go to state 8
    VAR             shift, and go to state 9
    SQRT            shift, and go to state 10
    CBRT            shift, and go to state 11
    TYPE_BYTE       shift, and go to state 12
    TYPE_SHORT      shift, and go to state 13
    TYPE_INT        shift, and go to state 14
    TYPE_LONG       shift, and go to state 15
    TYPE_STRING     shift, and go to state 16
    DEC             shift, and go to state 17
    INC             shift, and go to state 18
    TRUE            shift, and go to state 19
    FALSE           shift, and go to state 20
    TO_STRING       shift, and go to state 21
    TO_INT          shift, and go to state 22
    LPAREN          shift, and go to state 23
    SEMICOLON       shift, and go to state 24
    INT             shift, and go to state 25
    FLOAT           shift, and go to state 26
    STRING          shift, and go to state 27
    STRING_LITERAL  shift, and go to state 28

    pony                       go to state 29
    statement                  go to state 30
    statement_list             go to state 31
    expression_statement       go to state 32
    primary_expression         go to state 33
    expression                 go to state 34
    concat_expression          go to state 35
    assignment_expression      go to state 36
    conditional_expression     go to state 37
    logical_or_expression      go to state 38
    logical_and_expression     go to state 39
    inclusive_or_expression    go to state 40
    exclusive_or_expression    go to state 41
    and_expression             go to state 42
    equality_expression        go to state 43
    relational_expression      go to state 44
    shift_expression           go to state 45
    additive_expression        go to state 46
    multiplicative_expression  go to state 47
    unary_expression           go to state 48
    postfix_expression         go to state 49
    if_statement               go to state 50
    loop_statement             go to state 51
    jump_statement             go to state 52
    declaration                go to state 53
    declaration_specifiers     go to state 54
    type_specifier             go to state 55
    number                     go to state 56
    string                     go to state 57


state 1

   73 unary_expression: SYSCALL . LPAREN expression RPAREN

    LPAREN  shift, and go to state 58


state 2

   70 unary_expression: PRINTLN . LPAREN expression RPAREN
   71                 | PRINTLN . concat_expression

    SYSCALL         shift, and go to state 1
    PRINTLN         shift, and go to state 2
    PRINTNL         shift, and go to state 3
    TOKEN_READ      shift, and go to state 8
    SQRT            shift, and go to state 10
    CBRT            shift, and go to state 11
    DEC             shift, and go to state 17
    INC             shift, and go to state 18
    TRUE            shift, and go to state 19
    FALSE           shift, and go to state 20
    TO_STRING       shift, and go to state 21
    TO_INT          shift, and go to state 22
    LPAREN          shift, and go to state 59
    INT             shift, and go to state 25
    FLOAT           shift, and go to state 26
    STRING          shift, and go to state 27
    STRING_LITERAL  shift, and go to state 28

    primary_expression         go to state 33
    expression                 go to state 60
    concat_expression          go to state 61
    assignment_expression      go to state 36
    conditional_expression     go to state 37
    logical_or_expression      go to state 38
    logical_and_expression     go to state 39
    inclusive_or_expression    go to state 40
    exclusive_or_expression    go to state 41
    and_expression             go to state 42
    equality_expression        go to state 43
    relational_expression      go to state 44
    shift_expression           go to state 45
    additive_expression        go to state 46
    multiplicative_expression  go to state 47
    unary_expression           go to state 48
    postfix_expression         go to state 49
    number                     go to state 56
    string                     go to state 57


state 3

   72 unary_expression: PRINTNL . LPAREN expression RPAREN

    LPAREN  shift, and go to state 62


state 4

   84 loop_statement: WHILE . LPAREN expression RPAREN compound_statement

    LPAREN  shift, and go to state 63


state 5

   91 jump_statement: BREAK . SEMICOLON

    SEMICOLON  shift, and go to state 64


state 6

   90 jump_statement: CONTINUE . SEMICOLON

    SEMICOLON  shift, and go to state 65


state 7

   82 if_statement: IF . LPAREN expression RPAREN compound_statement
   83             | IF . LPAREN expression RPAREN compound_statement ELSE compound_statement

    LPAREN  shift, and go to state 66


state 8

   74 unary_expression: TOKEN_READ . LPAREN TYPE_INT RPAREN
   75                 | TOKEN_READ . LPAREN TYPE_BYTE RPAREN
   76                 | TOKEN_READ . LPAREN TYPE_SHORT RPAREN
   77                 | TOKEN_READ . LPAREN TYPE_LONG RPAREN
   78                 | TOKEN_READ . LPAREN TYPE_LONG RPAREN
  118 string: TOKEN_READ . LPAREN RPAREN
  119       | TOKEN_READ . LPAREN TYPE_STRING RPAREN

    LPAREN  shift, and go to state 67


state 9

   96 declaration_specifiers: VAR . LTHAN declaration_specifiers GTHAN TOKEN_ID
   97                       | VAR . TOKEN_ID EQUAL expression

    LTHAN     shift, and go to state 68
    TOKEN_ID  shift, and go to state 69


state 10

   68 unary_expression: SQRT . LPAREN expression RPAREN

    LPAREN  shift, and go to state 70


state 11

   69 unary_expression: CBRT . LPAREN expression RPAREN

    LPAREN  shift, and go to state 71


state 12

  101 type_specifier: TYPE_BYTE .

    $default  reduce using rule 101 (type_specifier)


state 13

   99 type_specifier: TYPE_SHORT .

    $default  reduce using rule 99 (type_specifier)


state 14

   98 type_specifier: TYPE_INT .

    $default  reduce using rule 98 (type_specifier)


state 15

  100 type_specifier: TYPE_LONG .

    $default  reduce using rule 100 (type_specifier)


state 16

  102 type_specifier: TYPE_STRING .

    $default  reduce using rule 102 (type_specifier)


state 17

   66 unary_expression: DEC . unary_expression

    SYSCALL         shift, and go to state 1
    PRINTLN         shift, and go to state 2
    PRINTNL         shift, and go to state 3
    TOKEN_READ      shift, and go to state 8
    SQRT            shift, and go to state 10
    CBRT            shift, and go to state 11
    DEC             shift, and go to state 17
    INC             shift, and go to state 18
    TRUE            shift, and go to state 19
    FALSE           shift, and go to state 20
    TO_STRING       shift, and go to state 21
    TO_INT          shift, and go to state 22
    LPAREN          shift, and go to state 23
    INT             shift, and go to state 25
    FLOAT           shift, and go to state 26
    STRING          shift, and go to state 27
    STRING_LITERAL  shift, and go to state 28

    primary_expression  go to state 33
    unary_expression    go to state 72
    postfix_expression  go to state 49
    number              go to state 56
    string              go to state 73


state 18

   65 unary_expression: INC . unary_expression

    SYSCALL         shift, and go to state 1
    PRINTLN         shift, and go to state 2
    PRINTNL         shift, and go to state 3
    TOKEN_READ      shift, and go to state 8
    SQRT            shift, and go to state 10
    CBRT            shift, and go to state 11
    DEC             shift, and go to state 17
    INC             shift, and go to state 18
    TRUE            shift, and go to state 19
    FALSE           shift, and go to state 20
    TO_STRING       shift, and go to state 21
    TO_INT          shift, and go to state 22
    LPAREN          shift, and go to state 23
    INT             shift, and go to state 25
    FLOAT           shift, and go to state 26
    STRING          shift, and go to state 27
    STRING_LITERAL  shift, and go to state 28

    primary_expression  go to state 33
    unary_expression    go to state 74
    postfix_expression  go to state 49
    number              go to state 56
    string              go to state 73


state 19

  112 number: TRUE .

    $default  reduce using rule 112 (number)


state 20

  113 number: FALSE .

    $default  reduce using rule 113 (number)


state 21

  117 string: TO_STRING . LPAREN expression RPAREN

    LPAREN  shift, and go to state 75


state 22

   67 unary_expression: TO_INT . LPAREN expression RPAREN

    LPAREN  shift, and go to state 76


state 23

   13 primary_expression: LPAREN . expression RPAREN

    SYSCALL         shift, and go to state 1
    PRINTLN         shift, and go to state 2
    PRINTNL         shift, and go to state 3
    TOKEN_READ      shift, and go to state 8
    SQRT            shift, and go to state 10
    CBRT            shift, and go to state 11
    DEC             shift, and go to state 17
    INC             shift, and go to state 18
    TRUE            shift, and go to state 19
    FALSE           shift, and go to state 20
    TO_STRING       shift, and go to state 21
    TO_INT          shift, and go to state 22
    LPAREN          shift, and go to state 23
    INT             shift, and go to state 25
    FLOAT           shift, and go to state 26
    STRING          shift, and go to state 27
    STRING_LITERAL  shift, and go to state 28
